--- a/labs/ex03/template/ex03.ipynb
+++ b/labs/ex03/template/ex03.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "#### Import python files from another directory\n",
@@ -12,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "you can now import your desired files, for example, we can import grid_search.py with:"
@@ -49,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "As you can see we are now able to call functions from the grid_search.py file."
@@ -75,7 +72,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 1 Least squares and linear basis functions models\n",
@@ -113,7 +109,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### You can test your implementation here"
@@ -144,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "### Load the data\n",
@@ -176,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Test it here"
@@ -193,7 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "## 1.2 Least squares with a linear basis function model\n",
@@ -254,7 +246,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Once your implementation of `build_poly` passes the test, copy it to `build_polynomial.py`\n",
@@ -307,7 +298,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Run polynomial regression"
@@ -324,7 +314,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Your results should look like this:"
@@ -332,7 +321,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "![alt text](visualize_polynomial_regression.png)"
@@ -340,7 +328,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# 2 Evaluating model predication performance\n",
@@ -397,7 +384,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Then, test your `split_data` function below."
@@ -448,7 +434,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Demo time"
@@ -481,7 +466,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Your graph should look like this:"
@@ -489,7 +473,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "![alt text](split_demo.png)"
@@ -497,7 +480,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "# Ridge Regression\n",
@@ -578,7 +560,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -600,7 +581,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "Your plot should look like:"
@@ -608,7 +588,6 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
    "source": [
     "![alt text](ridge_regression.png)"
@@ -616,8 +595,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
