--- a/labs/ex03/template/ex03.ipynb
+++ b/labs/ex03/template/ex03.ipynb
@@ -32,12 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-100.  -25.   50.  125.  200.] [-150.  -75.    0.   75.  150.]\n"
+     ]
+    }
+   ],
    "source": [
-    "import grid_search  # You then need to call your functions using grid_search.function_name()\n",
-    "import grid_search as gs  # You then need to call your functions using gs.function_name()\n",
+    "#import grid_search  # You then need to call your functions using grid_search.function_name()\n",
+    "#import grid_search as gs  # You then need to call your functions using gs.function_name()\n",
     "from grid_search import *  # You can call any functions of the file with function_name()\n",
     "\n",
     "# Let's try to call generate_w from grid_search.py:\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +111,10 @@
     "    # INSERT YOUR CODE HERE\n",
     "    # least squares: TODO\n",
     "    # returns mse, and optimal weights\n",
-    "    # ***************************************************\n",
-    "    raise NotImplementedError"
+    "    w = np.matmul(np.linalg.inv(np.matmul(tx.T,tx)),np.matmul(tx.T,y))\n",
+    "    mse = (0.5*(1/y.shape[0])*np.matmul((y - np.matmul(tx,w)).T,(y - np.matmul(tx,w)))).item()\n",
+    "    return w,mse\n",
+    "    # ***************************************************"
    ]
   },
   {
@@ -116,9 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ The are some issues with your implementation of `least_squares`:\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 13, in least_squares\n",
+      "Failed example:\n",
+      "    least_squares(np.array([0.1,0.2]), np.array([[2.3, 3.2], [1., 0.1]]))\n",
+      "Expected:\n",
+      "    (array([ 0.21212121, -0.12121212]), 8.666684749742561e-33)\n",
+      "Got:\n",
+      "    (array([ 0.21212121, -0.12121212]), 9.629649721936179e-33)\n",
+      "**********************************************************************\n"
+     ]
+    }
+   ],
    "source": [
     "test(least_squares)\n",
     "# NB:\n",
@@ -133,7 +160,7 @@
     "# close to zero.\n",
     "#\n",
     "# In this case,\n",
-    "# Failing the test doesn't necessarily means\n",
+    "# Failing the test doesn't necessarily mean\n",
     "# your implementation is wrong.:)"
    ]
   },
@@ -147,7 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +200,38 @@
     "    # least square or grid search: TODO\n",
     "    # this code should compare the optimal weights obtained\n",
     "    # by least squares vs. grid search\n",
-    "    # ***************************************************\n",
-    "    raise NotImplementedError"
+    "    # Generate the grid of parameters to be swept\n",
+    "    grid_w0, grid_w1 = generate_w(num_intervals=100)\n",
+    "\n",
+    "    # Start the grid search\n",
+    "    start_time = datetime.datetime.now()\n",
+    "    grid_losses = grid_search(y, tx, grid_w0, grid_w1)\n",
+    "\n",
+    "    # Select the best combinaison\n",
+    "    loss_star, w0_star, w1_star = get_best_parameters(grid_w0, grid_w1, grid_losses)\n",
+    "    end_time = datetime.datetime.now()\n",
+    "    execution_time = (end_time - start_time).total_seconds()\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(\n",
+    "    \"Grid Search: loss*={l}, w0*={w0}, w1*={w1}, execution time={t:.3f} seconds\".format(\n",
+    "        l=loss_star, w0=w0_star, w1=w1_star, t=execution_time\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    start_time = datetime.datetime.now()\n",
+    "    w,mse = least_squares(y, tx)\n",
+    "    end_time = datetime.datetime.now()\n",
+    "    execution_time = (end_time - start_time).total_seconds()\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(\n",
+    "    \"Least Squares: loss*={l}, w0*={w0}, w1*={w1}, execution time={t:.3f} seconds\".format(\n",
+    "        l=mse, w0=w[0], w1=w[1], t=execution_time\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # ***************************************************\\"
    ]
   },
   {
@@ -177,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search: loss*=15.558703368609534, w0*=72.72727272727272, w1*=13.636363636363626, execution time=0.640 seconds\n",
+      "Least Squares: loss*=15.385887868829407, w0*=73.29392200210476, w1*=13.479712434989283, execution time=0.002 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "test_your_least_squares()"
    ]
