--- a/labs/ex03/template/ex03.ipynb
+++ b/labs/ex03/template/ex03.ipynb
@@ -711,7 +711,7 @@
     "    >>> ridge_regression(np.array([0.1,0.2]), np.array([[2.3, 3.2], [1., 0.1]]), 1)\n",
     "    array([0.03947092, 0.00319628])\n",
     "    \"\"\"\n",
-    "    return np.linalg.solve(np.matmul(tx.T,tx) + 2*y.shape[0]*lambda_*np.eye(tx.shape[1]),np.matmul(tx.T,y))"
+    "    return np.linalg.solve(np.matmul(tx.T,tx) + 2*y.shape[0]*lambda_*np.identity(tx.shape[1]),np.matmul(tx.T,y))"
    ]
   },
   {
