--- a/labs/ex04/template/ex04.ipynb
+++ b/labs/ex04/template/ex04.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,30 +350,52 @@
     "    # INSERT YOUR CODE HERE\n",
     "    # cross validation over degrees and lambdas: TODO\n",
     "    # ***************************************************\n",
+    "    rmse_te_degree = []\n",
+    "    lambda_by_degree = []\n",
+    "    \n",
     "    for degree in degrees:\n",
+    "        rmse_te_lambda = []\n",
     "        for lambda_ in lambdas:\n",
-    "            avg_loss_tr = 0\n",
     "            avg_loss_te = 0\n",
     "            for k in range(k_fold):\n",
-    "                loss_tr, loss_te = cross_validation(y, x, k_indices, k, lambda_, degree)\n",
-    "                avg_loss_tr += loss_tr\n",
+    "                _, loss_te = cross_validation(y, x, k_indices, k, lambda_, degree)\n",
     "                avg_loss_te += loss_te\n",
-    "            avg_loss_tr /= k_fold\n",
     "            avg_loss_te /= k_fold\n",
-    "            rmse_tr.append(avg_loss_tr)\n",
-    "            rmse_te.append(avg_loss_te)\n",
-    "        \n",
-    "    best_rmse = min(rmse_te)\n",
-    "    best_lambda = lambdas[rmse_te.index(best_rmse)]\n",
+    "            rmse_te_lambda.append(avg_loss_te)\n",
+    "        best_rmse_te_lambda = min(rmse_te_lambda)\n",
+    "        rmse_te_degree.append(best_rmse_te_lambda)\n",
+    "        lambda_by_degree.append(lambdas[rmse_te_lambda.index(best_rmse_te_lambda)])\n",
+    "    \n",
+    "    best_rmse = min(rmse_te_degree)\n",
+    "    best_lambda = lambda_by_degree[rmse_te_degree.index(best_rmse)]\n",
+    "    best_degree = degrees[rmse_te_degree.index(best_rmse)]\n",
     "\n",
     "    return best_degree, best_lambda, best_rmse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ The are some issues with your implementation of `best_degree_selection`:\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 13, in best_degree_selection\n",
+      "Failed example:\n",
+      "    best_degree_selection(np.arange(2,11), 4, np.logspace(-4, 0, 30))\n",
+      "Expected:\n",
+      "    (7, 0.004520353656360241, 0.28957280566456634)\n",
+      "Got:\n",
+      "    (7, 0.004520353656360241, 0.2895728056615223)\n",
+      "**********************************************************************\n",
+      "The best rmse of 0.290 is obtained for a degree of 7 and a lambda of 0.00452.\n"
+     ]
+    }
+   ],
    "source": [
     "# can lead to a numerical error if you use an older version than Python 3.9\n",
     "test(best_degree_selection)\n",
